# album-explorer

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.faces  LICENSE  README.md  README_en.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/routers/: albums.py  assets.py  clusters.py  favorites.py  map_view.py  persons.py  saved_searches.py  search.py  stats.py  tags.py  thumbnails.py  timeline.py
backend/app/services/: asset_paths.py  query_builder.py  thumbnail.py
backend/tasks/: assign_new_faces.py  build_neighbors.py  build_tag_graph.py  classify_media_type.py  cluster_faces.py  detect_faces.py  enrich_clusters.py  generate_embeddings.py  generate_thumbnails.py  reverse_geocode.py  run_clustering.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/components/: AlbumPicker.vue  DateRangePicker.vue
frontend/src/components/gallery/: AssetMetaInfo.vue  PhotoDetail.vue  PhotoGrid.vue  (+1 more)
frontend/src/composables/: index.ts  useKeyboard.ts  usePagination.ts  useSelection.ts
frontend/src/i18n/: index.ts
frontend/src/router/: index.ts
frontend/src/stores/: assets.ts  favorites.ts  filters.ts  ui.ts
frontend/src/views/: AlbumDetailPage.vue  AlbumsPage.vue  ClusterDetailPage.vue  ClustersPage.vue  ExplorePage.vue  FavoritesPage.vue  HomeView.vue  MapPage.vue  PersonDetailPage.vue  PersonsPage.vue  SearchPage.vue  TagsPage.vue  TimelinePage.vue
(+4 files in other folders)
