[project]
name = "album-explorer-backend"
version = "0.1.0"
description = "相册语义浏览器后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "Pillow>=10.4.0",
    "pillow-heif>=0.18.0",
    "numpy>=1.26.0",
    "reverse_geocoder>=1.5.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0.0",
    "hdbscan>=0.8.38",
    "scikit-learn>=1.5.0",
    "torch>=2.0.0",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
